--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     display: flex;
     gap: 15px;
 }
@@ -15,6 +15,6 @@ body {
     justify-content: space-between;
     border-top: 1px solid #000000;
     padding: 0px 10px;
-}
+} */
 
 /* --------------------------------------------------------------------------------------------------- 01 */
