--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
-/* body {
+.wrapper {
     display: flex;
     gap: 15px;
 }
 
 .card {
-    width: 250px;
+    width: 200px;
     text-align: center;
     border: 1px solid #000000;
     padding-bottom: 10px;
@@ -15,6 +15,6 @@
     justify-content: space-between;
     border-top: 1px solid #000000;
     padding: 0px 10px;
-} */
+}
 
 /* --------------------------------------------------------------------------------------------------- 01 */
