--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,28 @@
-.wrapper {
+body {
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    padding: 15px 5px;
+    border-bottom: 1px solid #000000;
+}
+.btnSet {
     display: flex;
     gap: 15px;
+}
+
+/* .searchForm {
+} */
+
+.wrapper {
+    padding: 15px 0;
+    display: flex;
+    flex-wrap: wrap;
+    width: 636px;
+    gap: 15px;
+    
 }
 
 .card {
