--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,27 @@ input {
     gap: 5px;
 }
 
+.contentHead {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+    padding: 0 5px;
+    height: 40px;
+    gap: 15px;
+    background-color:rgb(127, 255, 212);
+    border: 1px solid rgb(102, 156, 138);
+    border-radius: 8px;
+}
+
+.content {
+    padding-top: 15px;
+}
+
+.contentHead button{
+    height: 25px;
+}
+
 .wrapper {
-    padding: 15px 0;
     display: flex;
     flex-wrap: wrap;
     width: 636px;
